# EFS_auth

./: .env.auth  .env.exemple  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  exemple.env  main.py  pyproject.toml
1/: .env.auth  .env.content
db/postgres_content/: entrypoint.sh
docs/base/: base.puml
docs/ugc/: requirements.md  ugc_component.puml
infra/docker/: postgres.yml  redis.yml
infra/helpers/: base.yml  docker.yml
infra/nginx/: nginx.conf
infra/nginx/configs/: site.conf
infra/var/auth/: .env.postgres  .env.redis
infra/var/content/: .env.elastic  .env.postgres  .env.redis
migrations/: Dockerfile  entrypoint.sh  env.py
migrations/versions/: 2024_04_26_1404-a71fab5587ae_init.py  2024_05_07_0156-98498957e218_migration2.py  2024_05_08_1819-ef631ce0733f_create_social_account.py
nginx/configs/: site.conf
postgres_content/: entrypoint.sh  movies_database.ddl
src/admin/: Dockerfile  entrypoint.sh  uwsgi.ini
src/admin/access/: apps.py  models.py
src/admin/access/migrations/: 0001_initial.py
src/admin/config/: postgres.py  settings.py  urls.py
src/admin/config/components/: apps.py  database.py  middleware.py
src/admin/core/: config.py
src/admin/movies/: admin.py  models.py
src/admin/movies/migrations/: 0001_initial.py
src/admin/users/: apps.py  auth.py  managers.py  models.py
src/admin/users/migrations/: 0001_initial.py
src/auth/: Dockerfile  entrypoint.sh  main.py
src/auth/cache/: redis.py
src/auth/configs/: google.py  loader.py
src/auth/core/: config.py
src/auth/endpoints/v1/: oauth2.py  permissions.py  roles.py  tokens.py  users.py  users_additional.py
src/auth/models/api/: base.py
src/auth/models/db/: login_history.py  permission.py  role.py  user.py
src/auth/oauth_clients/: abstract.py  google.py
src/auth/services/: base.py  base_oauth2.py  current_user.py  google_oauth2.py  login_history.py  oauth2.py  permission.py  role.py  role_pemission.py  token.py  user.py
src/auth/utils/: startup.py  tokens.py
src/auth/validators/: base.py  permission.py  role.py  role_permission.py  token.py  user.py
src/cache/: abstract.py  redis.py
src/configs/: __init__.py  app.py  authjwt.py  elastic.py  jeager.py  loader.py  notifications_api.py  oauth2_google.py  postgres.py  redis.py  sentry.py  start_up.py  token.py
src/content/: Dockerfile  entrypoint.sh  main.py
src/content/cache/: abstract.py  redis.py
src/content/core/: config.py  utils.py
src/content/db/: elastic.py
src/content/endpoints/v1/: films.py  genres.py  persons.py
src/content/models/: base.py
src/content/models/db/: film.py  genre.py  person.py
src/content/services/: base.py  current_user.py  film.py  genre.py  person.py
src/content/validators/: token.py
src/core/: config.py
src/core/cache/: abstract.py  redis.py
src/core/configs/: auth_jwt.py  base.py  elastic.py  google.py  loader.py  postgres.py  redis.py
src/core/db/clients/: abstract.py  postgres.py
src/core/db/entities/: __init__.py  login_history.py  permission.py  role.py  social_account.py  user.py
src/core/db/repositories/: abstract.py  base.py  login_history.py  permission.py  role.py  social_account.py  user.py
src/core/oauth_clients/: google.py
src/core/utils/: psycopg.py  sqlalchemy.py
src/db/clients/: postgres.py
src/db/entities/: __init__.py  login_history.py  permission.py  role.py  role_permission.py  social_account.py  user.py
src/db/repositories/: abstract.py  base.py  login_history.py  permission.py  role.py  role_pemission.py  social_account.py  user.py
src/db/repositories/many_to_many/: base.py  role_pemission.py
src/endpoints/v1/: oauth2.py  permissions.py  roles.py  tokens.py  users_additional.py
src/etl_content/: Dockerfile  entrypoint.sh  main.py
src/etl_content/config/: base.py  genres.py  movies.py  persons.py  postgres.py
src/etl_content/genres/: transformer.py
src/etl_content/helpers/: extractor.py  loader.py
src/etl_content/movies/: transformer.py
src/etl_content/persons/: transformer.py
src/etl_permission/: Dockerfile  main.py  state.json
src/etl_permission/config/: base.py  postgres.py
src/etl_permission/helpers/: extractor.py  loader.py  transformer.py
src/models/api/v1/: __init__.py  base.py  login_history.py  permissions.py  role_pemission.py  roles.py  social_account.py  users.py
src/models/db/: permission.py  role.py  role_permission.py  social_account.py
src/oauth2_clients/: abstract.py  google.py
src/postgres_extensions/: Dockerfile
src/services/: base.py  base_oauth2.py  current_user.py  google_oauth2.py  oauth2.py  permission.py  role.py  role_pemission.py  start_up.py  token.py
src/services/oauth2/: base.py  google.py
src/utils/: pagination.py  psycopg.py  sqlalchemy.py  startup.py  tokens.py
src/validators/: base.py  permission.py  role.py  role_permission.py  user.py
tests/: Dockerfile  entrypoint.sh
tests/auth/functional/: conftest.py
tests/auth/functional/fixtures/: connections.py  db_operations.py  token_operations.py
tests/auth/functional/src/: test_permissions.py  test_roles.py  test_tokens.py  test_users.py  test_users_additional.py
tests/auth/functional/testdata/: permissions_data.py  roles_data.py  users_data.py
tests/auth/functional/utils/: wait_for_redis.py
tests/content/: entrypoint.sh
tests/content/functional/: conftest.py  settings.py
tests/content/functional/fixtures/: connections.py  db_operations.py
tests/content/functional/src/: test_film.py  test_genre.py  test_person.py
tests/content/functional/testdata/: films_data.py  persons_data.py
tests/content/functional/utils/: wait_for_es.py  wait_for_redis.py
tests/functional/: conftest.py  settings.py
tests/functional/fixtures/: connections.py  db_operations.py  token_operations.py
tests/functional/src/: test_permissions.py  test_roles.py  test_tokens.py  test_users.py  test_users_additional.py
tests/functional/testdata/: base_data.py  permissions_data.py  tokens_data.py  users_data.py
tests/functional/utils/: wait_for_redis.py
(+19 files in other folders)
